ola-parser/src/testdata/syntaxTests/userDefinedValueType/non_value_type_mapping_err.sol
type MyInt is mapping(u256 => u256);
// ----
// TypeError 8657: (14-35): The underlying type for a user defined value type has to be an elementary value type.
